crates/sniff-test/tests/snapshots/fixtures__std_trait_impl_glob.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "std_trait_impl_glob::put",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "std_trait_impl_glob",
      "scope": "workspace"
    },
    "reason": "call to `alloc::vec::Vec::<T, A>::push` with a documented `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "std_trait_impl_glob::put",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:9:1: 9:44",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:10:5: 10:23",
    "target": "alloc::vec::Vec::<T, A>::push",
    "trace": [
      "src/lib.rs:10:5: 10:23: std_trait_impl_glob::put --direct-call-> alloc::vec::Vec::<T, A>::push"
    ],
    "trace-id": "0b293c90"
  }
]
