crates/sniff-test/tests/snapshots/fixtures__structured_safety_docs_require_each_named_justification.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "ambiguous_markers::complex_panic_layouts",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "nonzero: the divisor must not be zero.",
      "bounded: the input must be within the supported range.",
      "audited: the call path must have been audited.",
      "stable: the backing state must not change during the call."
    ],
    "owner": {
      "crate": "ambiguous_markers",
      "scope": "workspace"
    },
    "reason": "recorded `// PANIC:` justification for call to `ambiguous_markers::complex_panic_contract` with a documented `# Panics` obligation does not satisfy the remaining `# Panics` requirements",
    "requirements": [
      "nonzero: the divisor must not be zero.",
      "bounded: the input must be within the supported range.",
      "audited: the call path must have been audited.",
      "stable: the backing state must not change during the call."
    ],
    "root": "ambiguous_markers::complex_panic_layouts",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:61:1: 61:31",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:70:5: 70:29",
    "target": "ambiguous_markers::complex_panic_contract",
    "trace": [
      "src/lib.rs:70:5: 70:29: ambiguous_markers::complex_panic_layouts --direct-call-> ambiguous_markers::complex_panic_contract"
    ],
    "trace-id": "011e466a"
  },
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "ambiguous_markers::complex_panic_layouts",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "stable: the backing state must not change during the call."
    ],
    "owner": {
      "crate": "ambiguous_markers",
      "scope": "workspace"
    },
    "reason": "recorded `// PANIC:` justification for call to `ambiguous_markers::complex_panic_contract` with a documented `# Panics` obligation does not satisfy the remaining `# Panics` requirements",
    "requirements": [
      "nonzero: the divisor must not be zero.",
      "bounded: the input must be within the supported range.",
      "audited: the call path must have been audited.",
      "stable: the backing state must not change during the call."
    ],
    "root": "ambiguous_markers::complex_panic_layouts",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:61:1: 61:31",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:77:5: 77:29",
    "target": "ambiguous_markers::complex_panic_contract",
    "trace": [
      "src/lib.rs:77:5: 77:29: ambiguous_markers::complex_panic_layouts --direct-call-> ambiguous_markers::complex_panic_contract"
    ],
    "trace-id": "5d012791"
  },
  {
    "effect": "safety",
    "finding": "documented-obligation",
    "function": "ambiguous_markers::complex_safety_layouts",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "aligned: the buffer must satisfy the required alignment.",
      "lifetime: the buffer must remain live for the duration of the call."
    ],
    "owner": {
      "crate": "ambiguous_markers",
      "scope": "workspace"
    },
    "reason": "recorded `// SAFETY:` justification for call to `ambiguous_markers::complex_safety_contract` with a documented `# Safety` obligation does not satisfy the remaining `# Safety` requirements",
    "requirements": [
      "allocation: the caller must own the buffer.",
      "initialized: every byte must be initialized.",
      "aligned: the buffer must satisfy the required alignment.",
      "lifetime: the buffer must remain live for the duration of the call."
    ],
    "root": "ambiguous_markers::complex_safety_layouts",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:40:1: 40:32",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:57:9: 57:34",
    "target": "ambiguous_markers::complex_safety_contract",
    "trace": [
      "src/lib.rs:57:9: 57:34: ambiguous_markers::complex_safety_layouts --direct-call-> ambiguous_markers::complex_safety_contract"
    ],
    "trace-id": "78bdf526"
  },
  {
    "effect": "safety",
    "finding": "documented-obligation",
    "function": "ambiguous_markers::foo",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "req_1: content",
      "req_2: content"
    ],
    "owner": {
      "crate": "ambiguous_markers",
      "scope": "workspace"
    },
    "reason": "recorded `// SAFETY:` justification for call to `ambiguous_markers::multi_safety_requirements_with_asterisks_and_ident` with a documented `# Safety` obligation does not satisfy the remaining `# Safety` requirements",
    "requirements": [
      "req_1: content",
      "req_2: content"
    ],
    "root": "ambiguous_markers::foo",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:13",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:18:9: 18:61",
    "target": "ambiguous_markers::multi_safety_requirements_with_asterisks_and_ident",
    "trace": [
      "src/lib.rs:18:9: 18:61: ambiguous_markers::foo --direct-call-> ambiguous_markers::multi_safety_requirements_with_asterisks_and_ident"
    ],
    "trace-id": "9f75b68b"
  },
  {
    "effect": "safety",
    "finding": "documented-obligation",
    "function": "ambiguous_markers::foo",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "requirement",
      "requirement"
    ],
    "owner": {
      "crate": "ambiguous_markers",
      "scope": "workspace"
    },
    "reason": "recorded `// SAFETY:` justification for call to `ambiguous_markers::multi_safety_requirements_with_no_sub_requirement_name` with a documented `# Safety` obligation does not satisfy the remaining `# Safety` requirements",
    "requirements": [
      "requirement",
      "requirement"
    ],
    "root": "ambiguous_markers::foo",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:13",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:23:9: 23:65",
    "target": "ambiguous_markers::multi_safety_requirements_with_no_sub_requirement_name",
    "trace": [
      "src/lib.rs:23:9: 23:65: ambiguous_markers::foo --direct-call-> ambiguous_markers::multi_safety_requirements_with_no_sub_requirement_name"
    ],
    "trace-id": "70d911c1"
  },
  {
    "effect": "safety",
    "finding": "documented-obligation",
    "function": "ambiguous_markers::foo",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "requirement"
    ],
    "owner": {
      "crate": "ambiguous_markers",
      "scope": "workspace"
    },
    "reason": "recorded `// SAFETY:` justification for call to `ambiguous_markers::multi_safety_requirements_with_no_sub_requirement_name` with a documented `# Safety` obligation does not satisfy the remaining `# Safety` requirements",
    "requirements": [
      "requirement",
      "requirement"
    ],
    "root": "ambiguous_markers::foo",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:13",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:36:9: 36:65",
    "target": "ambiguous_markers::multi_safety_requirements_with_no_sub_requirement_name",
    "trace": [
      "src/lib.rs:36:9: 36:65: ambiguous_markers::foo --direct-call-> ambiguous_markers::multi_safety_requirements_with_no_sub_requirement_name"
    ],
    "trace-id": "ebd32467"
  },
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "ambiguous_markers::unnamed_panic_layouts",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "the divisor must not be zero.",
      "the numerator must be within the supported range.",
      "the backing state must remain stable."
    ],
    "owner": {
      "crate": "ambiguous_markers",
      "scope": "workspace"
    },
    "reason": "recorded `// PANIC:` justification for call to `ambiguous_markers::unnamed_nested_panic_contract` with a documented `# Panics` obligation does not satisfy the remaining `# Panics` requirements",
    "requirements": [
      "the divisor must not be zero.",
      "the numerator must be within the supported range.",
      "the backing state must remain stable."
    ],
    "root": "ambiguous_markers::unnamed_panic_layouts",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:107:1: 107:31",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:115:5: 115:36",
    "target": "ambiguous_markers::unnamed_nested_panic_contract",
    "trace": [
      "src/lib.rs:115:5: 115:36: ambiguous_markers::unnamed_panic_layouts --direct-call-> ambiguous_markers::unnamed_nested_panic_contract"
    ],
    "trace-id": "6ed04a23"
  },
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "ambiguous_markers::unnamed_panic_layouts",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "the numerator must be within the supported range."
    ],
    "owner": {
      "crate": "ambiguous_markers",
      "scope": "workspace"
    },
    "reason": "recorded `// PANIC:` justification for call to `ambiguous_markers::unnamed_nested_panic_contract` with a documented `# Panics` obligation does not satisfy the remaining `# Panics` requirements",
    "requirements": [
      "the divisor must not be zero.",
      "the numerator must be within the supported range.",
      "the backing state must remain stable."
    ],
    "root": "ambiguous_markers::unnamed_panic_layouts",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:107:1: 107:31",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:122:5: 122:36",
    "target": "ambiguous_markers::unnamed_nested_panic_contract",
    "trace": [
      "src/lib.rs:122:5: 122:36: ambiguous_markers::unnamed_panic_layouts --direct-call-> ambiguous_markers::unnamed_nested_panic_contract"
    ],
    "trace-id": "692d53bc"
  },
  {
    "effect": "safety",
    "finding": "documented-obligation",
    "function": "ambiguous_markers::unnamed_safety_layouts",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "the caller must own the allocation.",
      "every byte must be initialized.",
      "the allocation must have the required alignment.",
      "the allocation must remain live for the duration of the call."
    ],
    "owner": {
      "crate": "ambiguous_markers",
      "scope": "workspace"
    },
    "reason": "recorded `// SAFETY:` justification for call to `ambiguous_markers::unnamed_nested_safety_contract` with a documented `# Safety` obligation does not satisfy the remaining `# Safety` requirements",
    "requirements": [
      "the caller must own the allocation.",
      "every byte must be initialized.",
      "the allocation must have the required alignment.",
      "the allocation must remain live for the duration of the call."
    ],
    "root": "ambiguous_markers::unnamed_safety_layouts",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:80:1: 80:32",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:92:9: 92:41",
    "target": "ambiguous_markers::unnamed_nested_safety_contract",
    "trace": [
      "src/lib.rs:92:9: 92:41: ambiguous_markers::unnamed_safety_layouts --direct-call-> ambiguous_markers::unnamed_nested_safety_contract"
    ],
    "trace-id": "45c42212"
  },
  {
    "effect": "safety",
    "finding": "documented-obligation",
    "function": "ambiguous_markers::unnamed_safety_layouts",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "every byte must be initialized.",
      "the allocation must have the required alignment."
    ],
    "owner": {
      "crate": "ambiguous_markers",
      "scope": "workspace"
    },
    "reason": "recorded `// SAFETY:` justification for call to `ambiguous_markers::unnamed_nested_safety_contract` with a documented `# Safety` obligation does not satisfy the remaining `# Safety` requirements",
    "requirements": [
      "the caller must own the allocation.",
      "every byte must be initialized.",
      "the allocation must have the required alignment.",
      "the allocation must remain live for the duration of the call."
    ],
    "root": "ambiguous_markers::unnamed_safety_layouts",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:80:1: 80:32",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:103:9: 103:41",
    "target": "ambiguous_markers::unnamed_nested_safety_contract",
    "trace": [
      "src/lib.rs:103:9: 103:41: ambiguous_markers::unnamed_safety_layouts --direct-call-> ambiguous_markers::unnamed_nested_safety_contract"
    ],
    "trace-id": "59f73e1c"
  }
]
