crates/sniff-test/tests/snapshots/fixtures__supertrait_dyn_dispatch.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "documented-panic",
    "level": "deny",
    "owner": {
      "crate": "supertrait_dyn_dispatch",
      "package-name": "supertrait-dyn-dispatch",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `supertrait_dyn_dispatch::Super::risky` with a `# Panics` contract has no recorded `// PANIC:` evidence",
    "root": "supertrait_dyn_dispatch::call_supertrait_method",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:22:1: 22:42",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:24:5: 24:23",
    "target": "supertrait_dyn_dispatch::Super::risky",
    "trace": [
      "src/lib.rs:24:5: 24:23: supertrait_dyn_dispatch::call_supertrait_method --indirect-call-> supertrait_dyn_dispatch::Super::risky"
    ]
  }
]
