crates/sniff-test/tests/snapshots/fixtures__suppression.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "compiler-assert-kind": "bounds-check",
    "kind": "compiler-assert",
    "level": "deny",
    "owner": {
      "crate": "suppression",
      "package-name": "suppression",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "compiler assertion (index out of bounds) has no recorded `// PANIC:` evidence",
    "root": "suppression::reported_index",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:5:1: 5:63",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:6:5: 6:18",
    "target": "compiler assert index out of bounds",
    "trace": [
      "src/lib.rs:6:5: 6:18: suppression::reported_index --assert-> compiler assert index out of bounds"
    ]
  }
]
