crates/sniff-test/tests/snapshots/fixtures__suppression_miss.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "suppression"
    },
    "dependencies": [],
    "findings": [
      {
        "kind": "compiler-assert",
        "level": "deny",
        "reason": "compiler assert",
        "root": "suppression::unchecked_index",
        "root-kind": "concrete",
        "span": "src/lib.rs:2:5: 2:18",
        "target": "compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)",
        "trace": [
          "src/lib.rs:2:5: 2:18: suppression::unchecked_index --assert-> compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)"
        ]
      }
    ],
    "format-version": 9,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
