crates/sniff-test/tests/snapshots/fixtures__target_feature_call_safety.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "function": "target_feature_call_safety::ordinary_caller",
    "kind": "unsafe-call-missing-justification",
    "level": "deny",
    "owner": {
      "crate": "target_feature_call_safety",
      "package-name": "target-feature-call-safety",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "unsafe call to `target_feature_call_safety::target_feature_callee` has no recorded `// SAFETY:` justification",
    "root": "target_feature_call_safety::ordinary_caller",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:23:1: 23:25",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:25:9: 25:32",
    "target": "target_feature_call_safety::target_feature_callee",
    "trace": [
      "src/lib.rs:25:9: 25:32: target_feature_call_safety::ordinary_caller --direct-call-> target_feature_call_safety::target_feature_callee"
    ]
  }
]
