crates/sniff-test/tests/snapshots/fixtures__trait_default_method.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "panic-invocation",
    "level": "deny",
    "owner": {
      "crate": "trait_default_method",
      "package-name": "trait-default-method",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic_fmt` has no recorded `// PANIC:` justification",
    "root": "trait_default_method::TraitDefaultMethod::default_panic",
    "root-kind": "generic",
    "root-span": "src/lib.rs:2:5: 2:28",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:3:9: 3:45",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:3:9: 3:45: trait_default_method::TraitDefaultMethod::default_panic --macro-expansion-> macro std::macros::panic",
      "src/lib.rs:3:9: 3:45: macro std::macros::panic --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ]
  }
]
